2007-07-27  Dietmar Warning  <dietmar.warning@arcor.de>

	* term/win.c (WIN_enhanced_open): Avoid compiler warning.

2007-07-24  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc: Fixed misprint in "3 multi-branch".

2007-07-24  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/win.trm: Document reading of wgnuplot.ini in user's %APPDATA%
	directory.

2007-07-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/fit.c (fit_command):
	Accept a string variable as the file name for "fit via <viafile>".
	Bug #1755532

2007-06-21  Ethan Merritt  <merritt@u.washington.edu>

	Fix two special cases where gnuplot auto-increments the line type, but
	does not check whether the user has requested user-defined line styles
	instead (via "set style increment user").

	* src/graph3d.c (do_3dplot cntr3d_lines):  If the [default] option
	`set clabel` is in effect then contours auto-increment over line types.
	Check for prefer_line_styles at this point.

	* src/graphics.c (do_plot plot_boxes): Columnstacked histograms auto-
	increment over line types.  Check for prefer_line_styles at thie point.

2007-06-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/internal.c (f_sprintf): Remove any remaining escape sequences (%%)
	from the tail of the format string after all of the input variables have
	been processed.
	Bug #1739625

2007-06-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/save.c (save_tics): save [xyz]tics must not follow the "offset"
	info with a bare number, because a negative number will be mis-parsed.
	Bugfix.

2007-06-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/unset.c (unset_label): Do not treat "unset label <n>" as a fatal
	error just because label <n> is not currently defined. Bug #1732706

	* term/post.trm (PS_load_fontfile): Add missing %.  Bug #1732991

2007-06-06  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Hotkey 'q' does not close the pm terminal.

2007-06-04  Petr Mikulik  <mikulik@physics.muni.cz>
