@@ -1,3 +1,10 @@
+2007-08-02  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/command.c (read_line): Treat line extension consistently
+	for both interactive and non-interactive input paths. This is 
+	Timothee Lecomte's version of the fix.
+	Bug #1753069.
+
 2007-07-27  Dietmar Warning  <dietmar.warning@arcor.de>
 
 	* term/win.c (WIN_enhanced_open): Avoid compiler warning.
